--- a/Даты_и_расстояния_2.ipynb
+++ b/Даты_и_расстояния_2.ipynb
@@ -156,26 +156,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "id": "st03t3bqF9fR"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting package metadata (current_repodata.json): ...working... done\n",
-            "Solving environment: ...working... done\n",
-            "\n",
-            "# All requested packages already installed.\n",
-            "\n",
-            "Retrieving notices: ...working... done\n",
-            "\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# !conda install -c conda-forge geopandas\n",
         "# %conda install fiona\n",
@@ -185,7 +170,8 @@
         "# !pip install shapely\n",
         "# %conda install geopy\n",
         "# %conda install shapely\n",
-        "# %conda install geopandas"
+        "# %conda install geopandas\n",
+        "# !pip install gdal"
       ]
     },
     {
@@ -221,7 +207,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[1;32me:\\Work programm\\IDE\\Jupyter\\ML-6_select\\Даты_и_расстояния.ipynb Ячейка 14\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F.ipynb#X14sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m geometry \u001b[39m=\u001b[39m [Point(xy) \u001b[39mfor\u001b[39;00m xy \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(data[\u001b[39m'\u001b[39m\u001b[39mlong\u001b[39m\u001b[39m'\u001b[39m], data[\u001b[39m'\u001b[39m\u001b[39mlat\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F.ipynb#X14sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m gdf \u001b[39m=\u001b[39m GeoDataFrame(data, geometry\u001b[39m=\u001b[39mgeometry)  \n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F.ipynb#X14sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m world \u001b[39m=\u001b[39m gpd\u001b[39m.\u001b[39;49mread_file(gpd\u001b[39m.\u001b[39;49mdatasets\u001b[39m.\u001b[39;49mget_path(\u001b[39m'\u001b[39;49m\u001b[39mnaturalearth_lowres\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m gdf\u001b[39m.\u001b[39mplot(ax\u001b[39m=\u001b[39mworld\u001b[39m.\u001b[39mplot(figsize\u001b[39m=\u001b[39m(\u001b[39m15\u001b[39m, \u001b[39m15\u001b[39m)), marker\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mo\u001b[39m\u001b[39m'\u001b[39m, color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mgreen\u001b[39m\u001b[39m'\u001b[39m, markersize\u001b[39m=\u001b[39m\u001b[39m15\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m plt\u001b[39m.\u001b[39mtitle(\u001b[39m'\u001b[39m\u001b[39mРасположение автомобилей на карте мира\u001b[39m\u001b[39m'\u001b[39m)\n",
+            "\u001b[1;32me:\\Work programm\\IDE\\Jupyter\\ML-6_select\\Даты_и_расстояния_2.ipynb Ячейка 14\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F_2.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m geometry \u001b[39m=\u001b[39m [Point(xy) \u001b[39mfor\u001b[39;00m xy \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(data[\u001b[39m'\u001b[39m\u001b[39mlong\u001b[39m\u001b[39m'\u001b[39m], data[\u001b[39m'\u001b[39m\u001b[39mlat\u001b[39m\u001b[39m'\u001b[39m])]\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F_2.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m gdf \u001b[39m=\u001b[39m GeoDataFrame(data, geometry\u001b[39m=\u001b[39mgeometry)  \n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F_2.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m world \u001b[39m=\u001b[39m gpd\u001b[39m.\u001b[39;49mread_file(gpd\u001b[39m.\u001b[39;49mdatasets\u001b[39m.\u001b[39;49mget_path(\u001b[39m'\u001b[39;49m\u001b[39mnaturalearth_lowres\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F_2.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m gdf\u001b[39m.\u001b[39mplot(ax\u001b[39m=\u001b[39mworld\u001b[39m.\u001b[39mplot(figsize\u001b[39m=\u001b[39m(\u001b[39m15\u001b[39m, \u001b[39m15\u001b[39m)), marker\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mo\u001b[39m\u001b[39m'\u001b[39m, color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mgreen\u001b[39m\u001b[39m'\u001b[39m, markersize\u001b[39m=\u001b[39m\u001b[39m15\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/Work%20programm/IDE/Jupyter/ML-6_select/%D0%94%D0%B0%D1%82%D1%8B_%D0%B8_%D1%80%D0%B0%D1%81%D1%81%D1%82%D0%BE%D1%8F%D0%BD%D0%B8%D1%8F_2.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m plt\u001b[39m.\u001b[39mtitle(\u001b[39m'\u001b[39m\u001b[39mРасположение автомобилей на карте мира\u001b[39m\u001b[39m'\u001b[39m)\n",
             "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\geopandas\\io\\file.py:236\u001b[0m, in \u001b[0;36m_read_file\u001b[1;34m(filename, bbox, mask, rows, engine, **kwargs)\u001b[0m\n\u001b[0;32m    167\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_read_file\u001b[39m(filename, bbox\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, mask\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, rows\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, engine\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m    168\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    169\u001b[0m \u001b[39m    Returns a GeoDataFrame from a file or URL.\u001b[39;00m\n\u001b[0;32m    170\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    234\u001b[0m \u001b[39m    by using the encoding keyword parameter, e.g. ``encoding='utf-8'``.\u001b[39;00m\n\u001b[0;32m    235\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 236\u001b[0m     engine \u001b[39m=\u001b[39m _check_engine(engine, \u001b[39m\"\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mread_file\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m function\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m    238\u001b[0m     filename \u001b[39m=\u001b[39m _expand_user(filename)\n\u001b[0;32m    240\u001b[0m     from_bytes \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
             "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\geopandas\\io\\file.py:107\u001b[0m, in \u001b[0;36m_check_engine\u001b[1;34m(engine, func)\u001b[0m\n\u001b[0;32m    105\u001b[0m     _check_pyogrio(func)\n\u001b[0;32m    106\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 107\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\n\u001b[0;32m    108\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe \u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m}\u001b[39;00m\u001b[39m requires the \u001b[39m\u001b[39m'\u001b[39m\u001b[39mpyogrio\u001b[39m\u001b[39m'\u001b[39m\u001b[39m or \u001b[39m\u001b[39m'\u001b[39m\u001b[39mfiona\u001b[39m\u001b[39m'\u001b[39m\u001b[39m package, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    109\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mbut neither is installed or imports correctly.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    110\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mImporting fiona resulted in: \u001b[39m\u001b[39m{\u001b[39;00mfiona_import_error\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m    111\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mImporting pyogrio resulted in: \u001b[39m\u001b[39m{\u001b[39;00mpyogrio_import_error\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m    112\u001b[0m     )\n\u001b[0;32m    114\u001b[0m \u001b[39mreturn\u001b[39;00m engine\n",
             "\u001b[1;31mImportError\u001b[0m: The 'read_file' function requires the 'pyogrio' or 'fiona' package, but neither is installed or imports correctly.\nImporting fiona resulted in: DLL load failed while importing ogrext: Не найден указанный модуль.\nImporting pyogrio resulted in: DLL load failed while importing _ogr: Не найден указанный модуль."
@@ -241,7 +227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
